--- a/resume.Rmd
+++ b/resume.Rmd
@@ -69,15 +69,14 @@ Data Scientist
 
 Sydney, NSW
 
-<b>**AUG**</b> 2016--2017
+2016--2017
 
- - Worked in Freelancer’s Trust & Safety team dealing with fraud, spam, chargebacks, verifications and other trust-related components of the site.
- - Created machine learning models for predicting spam, fraud and chargebacks. Responsible for the full process including live performance monitoring and the product decisions around how the  predictions should be actioned.
- - Algorithms include random forest, GBM, GLMs and autoML.
- - Seasonality analysis and revenue forecasting using Facebook’s Prophet tool.
- - Created and maintained an internal R package for automatic database connecting, reconnecting and closing.
+ - Payments, Trust & Safety team dealing with fraud, spam, chargebacks, and verifications
+ - Created machine learning models for spam, fraud and chargeback
+ - Seasonality analysis and revenue forecasting using Prophet
+ - Created internal R package
  - Optimised Redshift queries to reduce ETL times
- - Designed and analysed A/B tests to improve user funnels
+ - Designed and analysed A/B tests
 
 ### Accenture
 
@@ -87,14 +86,8 @@ Sydney, NSW
 
 2015--2016
 
- - Worked at the largest oil and gas client in Australia as a data scientist. Advanced analytics was used to predict equipment failure and enable predictive process control.
- - Applied advanced analytics techniques such as CART, Random Forest, GLMs, clustering, Markov Chain Models, feature selection, parameter optimisation and text mining to derive business value and support data driven decision making.
- - Manipulated data into forms that facilitate rapid analysis, implementation and automation using PostgreSQL and command line tools on AWS S3 and Redshift.
- - Migrated the existing codebase to Git, as well as trained the team in its use.
- - Liaised with the client to gather requirements, develop hypotheses and create solutions.
- - Interact with digital architects to develop solutions that enable live prediction of thousands of models under time and memory constraints.
- - Developed visualisations to communicate insights using R, Tableu and Excel.
-
+ - Oil and gas
+ - Predict equipment failure and enable predictive process control
 
 Education {data-icon=graduation-cap}
 --------------------------------------------------------------------------------
