--- a/resume.Rmd
+++ b/resume.Rmd
@@ -61,7 +61,7 @@ Data Science Lead
 
 Sydney, NSW
 
-AUG 2018 - Present
+Aug 2018 - Present
 
 ### Freelancer.com & Escrow.com
 
@@ -69,7 +69,7 @@ Data Science Lead
 
 Sydney, NSW
 
-2017 - AUG 2018
+2017 - Aug 2018
 
 ### Freelancer.com
 
@@ -90,7 +90,7 @@ Sydney, NSW
 
 Data Scientist
 
-Sydney, NSW
+Perth, WA
 
 2015 - 2016
 
